--- a/localization/ru.ext.xml
+++ b/localization/ru.ext.xml
@@ -9,7 +9,7 @@
     <Delete>Удалить</Delete>
     <Edit>Редактировать</Edit>
     <Fix>Исправить</Fix>
-    <GotoCodeLong>Перейти в код.</GotoCodeLong>
+    <GotoCodeLong>Перейти в код</GotoCodeLong>
     <Hide>Не показывать подобные сообщения в дальнейшем.</Hide>
     <NewName>Новое имя</NewName>
     <Off>Отключить</Off>
@@ -61,6 +61,8 @@
     <Zero>Обнулить</Zero>
   </CheckActions>
   <CheckComponent>
+    <StiFilterValueCheckLong>Для компонента {0} задан фильтр, но в нём не задано значение. Поэтому фильтр не применяется.</StiFilterValueCheckLong>
+    <StiFilterValueCheckShort>В фильтре не задано значение</StiFilterValueCheckShort>
     <StiAllowHtmlTagsInTextCheckLong>В тексте используются Html тэги, но значение свойства AllowHtmlTags равно false. Содержимое компонента {0} напечатается неправильно.</StiAllowHtmlTagsInTextCheckLong>
     <StiAllowHtmlTagsInTextCheckShort>Не задано значение свойства AllowHtmlTags</StiAllowHtmlTagsInTextCheckShort>
     <StiCanBreakComponentInContainerCheckLong>У контейнера '{0}' значение свойства CanBreak равно false, а у некоторых вложенных компонентов значение свойства CanBreak равно true.</StiCanBreakComponentInContainerCheckLong>
@@ -209,6 +211,9 @@
     <RenderingMessage>Предупреждения построения отчета. </RenderingMessage>
     <Warning>Внимание! </Warning>
   </CheckGlobal>
+  <CheckLicense>
+    <StiLicenseTrialCheckLong>Вы используете пробную версию продукта. Для полноценного использования Вам необходимо приобрести лицензию.</StiLicenseTrialCheckLong>
+  </CheckLicense>
   <CheckPage>
     <StiLostPointsOnPageCheckLong>На странице '{0}' найдены потерянные точки: {1}. Точки невидимы на странице и используются в следующих графических примитивах: вертикальная линия, прямоугольник и закругленный прямоугольник. Если точка не сопоставлена ни с одним компонентом, то ее можно удалить.</StiLostPointsOnPageCheckLong>
     <StiLostPointsOnPageCheckShort>Потерянные точки</StiLostPointsOnPageCheckShort>
