--- a/localization/ru.xml
+++ b/localization/ru.xml
@@ -466,8 +466,8 @@
     <TabItemEmbedCode>Код встраивания</TabItemEmbedCode>
     <TabItemQRCode>QR код</TabItemQRCode>
     <TabItemShare>Ссылка</TabItemShare>
+    <TermsOfService>Условия использования Stimulsoft</TermsOfService>
     <TermsOfUse>правилами</TermsOfUse>
-	<TermsOfService>Условия использования Stimulsoft</TermsOfService>
     <TextActivated>Активирована</TextActivated>
     <TextActivationDate>Дата активации</TextActivationDate>
     <TextDelete>Удаление</TextDelete>
@@ -779,13 +779,13 @@
     <TextNotFound>Указанный текст не найден. Текст: {0}</TextNotFound>
   </DesignerFx>
   <Desktop>
-    <WhoAreYou>Кто Вы?</WhoAreYou>
     <ButtonAddCloud>Добавить папку из Stimulsoft Cloud</ButtonAddCloud>
     <ButtonAddFolder>Добавить папку</ButtonAddFolder>
     <ButtonCreateDashboard>Создать панель индикаторов</ButtonCreateDashboard>
     <ButtonCreateReport>Создать отчет</ButtonCreateReport>
     <DoYouWantToInstallReports>Вы хотите установить шаблоны отчетов и панелей индикаторов?</DoYouWantToInstallReports>
     <InstallSamplesDesc>Давайте установим наши примеры! Они помогут вам освоить работу с нашим продуктом.</InstallSamplesDesc>
+    <WhoAreYou>Кто Вы?</WhoAreYou>
   </Desktop>
   <Dialogs>
     <StiButtonControl>Кнопка</StiButtonControl>
@@ -2386,7 +2386,7 @@
     <Download>Скачать</Download>
     <DownloadAll>Скачать все</DownloadAll>
     <DownloadAndInstall>Скачать и Установить</DownloadAndInstall>
-    <DownloadDataAdapter>Скачать адаптер данных</DownloadDataAdapter>
+    <DownloadDataAdapter>Получение адаптера данных</DownloadDataAdapter>
     <Downloads>Скачиваний:</Downloads>
     <IAccept>Я Согласен</IAccept>
     <IDecline>Я Отказываюсь</IDecline>
@@ -2878,6 +2878,9 @@
     <StiEnumeratorTypeArabic>Арабские цифры</StiEnumeratorTypeArabic>
     <StiEnumeratorTypeNone>Нет</StiEnumeratorTypeNone>
     <StiEnumeratorTypeRoman>Римские цифры</StiEnumeratorTypeRoman>
+    <StiExtendedStyleBoolFalse>Ложь</StiExtendedStyleBoolFalse>
+    <StiExtendedStyleBoolFromStyle>Из стиля</StiExtendedStyleBoolFromStyle>
+    <StiExtendedStyleBoolTrue>Истина</StiExtendedStyleBoolTrue>
     <StiFilterConditionBeginningWith>начинается с</StiFilterConditionBeginningWith>
     <StiFilterConditionBetween>между</StiFilterConditionBetween>
     <StiFilterConditionContaining>содержит</StiFilterConditionContaining>
@@ -2911,6 +2914,16 @@
     <StiFilterItemValueOpen>Открывающее значение</StiFilterItemValueOpen>
     <StiFilterModeAnd>И</StiFilterModeAnd>
     <StiFilterModeOr>Или</StiFilterModeOr>
+    <StiFontIconGroupAccessibilityIcons>Доступность</StiFontIconGroupAccessibilityIcons>
+    <StiFontIconGroupBrandIcons>Марка</StiFontIconGroupBrandIcons>
+    <StiFontIconGroupDirectionalIcons>Указатели</StiFontIconGroupDirectionalIcons>
+    <StiFontIconGroupGenderIcons>Пол</StiFontIconGroupGenderIcons>
+    <StiFontIconGroupMedicalIcons>Медицина</StiFontIconGroupMedicalIcons>
+    <StiFontIconGroupPaymentIcons>Платежи</StiFontIconGroupPaymentIcons>
+    <StiFontIconGroupSpinnerIcons>Прогресс</StiFontIconGroupSpinnerIcons>
+    <StiFontIconGroupTransportationIcons>Транспорт</StiFontIconGroupTransportationIcons>
+    <StiFontIconGroupVideoPlayerIcons>Видео</StiFontIconGroupVideoPlayerIcons>
+    <StiFontIconGroupWebApplicationIcons>Приложение</StiFontIconGroupWebApplicationIcons>
     <StiFormStartModeOnEnd>В конце</StiFormStartModeOnEnd>
     <StiFormStartModeOnPreview>В предварительном просмотре</StiFormStartModeOnPreview>
     <StiFormStartModeOnStart>В начале</StiFormStartModeOnStart>
@@ -2929,6 +2942,11 @@
     <StiHorAlignmentCenter>По центру</StiHorAlignmentCenter>
     <StiHorAlignmentLeft>По левому краю</StiHorAlignmentLeft>
     <StiHorAlignmentRight>По правому краю</StiHorAlignmentRight>
+    <StiIconAlignmentBottom>Внизу</StiIconAlignmentBottom>
+    <StiIconAlignmentLeft>Слева</StiIconAlignmentLeft>
+    <StiIconAlignmentNone>Нет</StiIconAlignmentNone>
+    <StiIconAlignmentRight>Спарва</StiIconAlignmentRight>
+    <StiIconAlignmentTop>Сверху</StiIconAlignmentTop>
     <StiImageProcessingDuplicatesTypeGlobalHide>Спрятать глобально</StiImageProcessingDuplicatesTypeGlobalHide>
     <StiImageProcessingDuplicatesTypeGlobalMerge>Соединить глобально</StiImageProcessingDuplicatesTypeGlobalMerge>
     <StiImageProcessingDuplicatesTypeGlobalRemoveImage>Удалить изображение глобально</StiImageProcessingDuplicatesTypeGlobalRemoveImage>
@@ -2988,6 +3006,7 @@
     <StiMarkerAlignmentLeft>Слева</StiMarkerAlignmentLeft>
     <StiMarkerAlignmentRight>Справа</StiMarkerAlignmentRight>
     <StiMarkerTypeCircle>Круг</StiMarkerTypeCircle>
+    <StiMarkerTypeHalfCircle>Полукруг</StiMarkerTypeHalfCircle>
     <StiMarkerTypeHexagon>Шестиугольник</StiMarkerTypeHexagon>
     <StiMarkerTypeRectangle>Прямоугольник</StiMarkerTypeRectangle>
     <StiMarkerTypeStar5>Звезда с 5 лучами</StiMarkerTypeStar5>
@@ -3680,6 +3699,7 @@
     <Hyperlink>Гиперссылка</Hyperlink>
     <HyperlinkDataColumn>Колонка данных гиперссылок</HyperlinkDataColumn>
     <Icon>Значок</Icon>
+    <IconAlignment>Выравнивание значка</IconAlignment>
     <IconSet>Набор значков</IconSet>
     <IconSetCondition>Набор значков</IconSetCondition>
     <Idents>Идентификаторы</Idents>
@@ -3757,6 +3777,7 @@
     <Length>Длина</Length>
     <LengthUnderLabels>Длина под подписью</LengthUnderLabels>
     <Lighting>Освещение</Lighting>
+    <LimitRows>Лимит строк</LimitRows>
     <Linear>Линейная</Linear>
     <LinearBarBorderBrush>Кисть границы линейной панели</LinearBarBorderBrush>
     <LinearBarBrush>Кисть линейной панели</LinearBarBrush>
@@ -3799,6 +3820,7 @@
     <Margins>Поля</Margins>
     <Marker>Маркер</Marker>
     <MarkerAlignment>Выравнивание маркера</MarkerAlignment>
+    <MarkerAngle>Угол маркера</MarkerAngle>
     <MarkerBorder>Граница маркера</MarkerBorder>
     <MarkerBrush>Кисть маркера</MarkerBrush>
     <MarkerColor>Цвет маркера</MarkerColor>
@@ -3940,8 +3962,10 @@
     <Range>Диапазон</Range>
     <RangeColorMode>Режим цвета диапозона</RangeColorMode>
     <RangeFrom>С</RangeFrom>
+    <RangeMode>Режим диапазона</RangeMode>
     <RangeScrollEnabled>Прокрутка диапазона</RangeScrollEnabled>
     <RangeTo>По</RangeTo>
+    <RangeType>Тип диапазона</RangeType>
     <Ratio>Коэффициент</Ratio>
     <RatioY>Коэффициент Y</RatioY>
     <ReadOnly>Только чтение</ReadOnly>
@@ -4022,6 +4046,7 @@
     <SeriesLabelsColor>Цвет подписей</SeriesLabelsColor>
     <SeriesLabelsLineColor>Цвет линии в подписи</SeriesLabelsLineColor>
     <SeriesLighting>Освещение рядов</SeriesLighting>
+    <SeriesShowBorder>Показывать границу серии</SeriesShowBorder>
     <SeriesShowShadow>Отображение тени рядов</SeriesShowShadow>
     <SeriesTitle>Заголовок серии</SeriesTitle>
     <Shadow>Тень</Shadow>
