--- a/localization/en.xml
+++ b/localization/en.xml
@@ -390,13 +390,13 @@
     <HyperlinkHavePassword>Have password</HyperlinkHavePassword>
     <HyperlinkRegisterAccount>Register FREE account</HyperlinkRegisterAccount>
     <InstallSamples>Install Samples</InstallSamples>
+    <LabelAddCloudFolder>Connect your Stimulsoft Cloud folder with reports and dashboards.</LabelAddCloudFolder>
+    <LabelAddFolder>Add your local folder with reports and dashboards.</LabelAddFolder>
     <labelCollectionName>Collection Name:</labelCollectionName>
     <LabelCreated>Created:</LabelCreated>
     <LabelCreateFolder>Create a new category in which you can place other items.</LabelCreateFolder>
-    <LabelAddFolder>Add your local folder with reports and dashboards.</LabelAddFolder>
-    <LabelAddCloudFolder>Connect your Stimulsoft Cloud folder with reports and dashboards.</LabelAddCloudFolder>
-    <LabelCreateReportTemplate>Create report template.</LabelCreateReportTemplate>
     <LabelCreateNewDashboard>Create new dashboard.</LabelCreateNewDashboard>
+    <LabelCreateReportTemplate>Create report template.</LabelCreateReportTemplate>
     <LabelCurrentPassword>Current Password:</LabelCurrentPassword>
     <LabelDataFile>Data File:</LabelDataFile>
     <LabelDataUrl>Data URL:</LabelDataUrl>
@@ -549,15 +549,6 @@
     <WizardRegisteredShareDescription>External access only for registered users from any workspace.</WizardRegisteredShareDescription>
     <WizardXmlDescription>Create a report with XML data.</WizardXmlDescription>
   </Cloud>
-  <Desktop>
-    <WhoAreYou>Who Are you?</WhoAreYou>
-    <ButtonCreateReport>Create Report</ButtonCreateReport>
-    <ButtonCreateDashboard>Create Dashboard</ButtonCreateDashboard>
-    <ButtonAddFolder>Add Folder</ButtonAddFolder>
-    <ButtonAddCloud>Add Cloud Folder</ButtonAddCloud>
-    <InstallSamplesDesc>Let's install our sample projects. They will help you learn the basics of working with our software.</InstallSamplesDesc>
-    <DoYouWantToInstallReports>Do you want to install templates of reports and dashboards?</DoYouWantToInstallReports>
-  </Desktop>
   <Components>
     <StiBarCode>Bar Code</StiBarCode>
     <StiChart>Chart</StiChart>
@@ -656,7 +647,7 @@
     <DuplicateField>Duplicate Field</DuplicateField>
     <EditExpression>Edit Expression</EditExpression>
     <EditField>Edit Field</EditField>
-	<EmptyDashboardFooter>Drag &amp; drop component from ToolBox or data from Dictionary</EmptyDashboardFooter>
+    <EmptyDashboardFooter>Drag &amp; drop component from ToolBox or data from Dictionary</EmptyDashboardFooter>
     <EmptyDashboardHeader>Dashboard is empty</EmptyDashboardHeader>
     <FieldInteractions>Field Interactions</FieldInteractions>
     <FieldTypeRestrictionHint>Only '{0}' type field can be used!</FieldTypeRestrictionHint>
@@ -786,6 +777,15 @@
     <TestConnection>Test Connection</TestConnection>
     <TextNotFound>The specified text was not found. Text : {0}</TextNotFound>
   </DesignerFx>
+  <Desktop>
+    <ButtonAddCloud>Add Cloud Folder</ButtonAddCloud>
+    <ButtonAddFolder>Add Folder</ButtonAddFolder>
+    <ButtonCreateDashboard>Create Dashboard</ButtonCreateDashboard>
+    <ButtonCreateReport>Create Report</ButtonCreateReport>
+    <DoYouWantToInstallReports>Do you want to install templates of reports and dashboards?</DoYouWantToInstallReports>
+    <InstallSamplesDesc>Let's install our sample projects. They will help you learn the basics of working with our software.</InstallSamplesDesc>
+    <WhoAreYou>Who Are you?</WhoAreYou>
+  </Desktop>
   <Dialogs>
     <StiButtonControl>Button</StiButtonControl>
     <StiCheckBoxControl>Check Box</StiCheckBoxControl>
@@ -1814,7 +1814,6 @@
     <AngleWatermark>The watermark text rotation angle.</AngleWatermark>
     <Background>Change the background of the selected components.</Background>
     <biConditions>Control list of conditions of the selected components.</biConditions>
-    <Interaction>Control an interaction of the selected components.</Interaction>
     <BorderColor>Select the border color of the selected component.</BorderColor>
     <BorderSidesAll>Switch on all borders sides of the selected components.</BorderSidesAll>
     <BorderSidesBottom>Switch on bottom border side of the selected components.</BorderSidesBottom>
@@ -1866,6 +1865,7 @@
     <GridMode>Show grid in lines or dots.</GridMode>
     <ImageAlignment>Put a watermark image on a page.</ImageAlignment>
     <ImageTransparency>Change the transparency of the watermark image.</ImageTransparency>
+    <Interaction>Control an interaction of the selected components.</Interaction>
     <LineSpacing>Choose how much space appears between lines of text or between paragraphs.</LineSpacing>
     <Link>Link the component to the current container.</Link>
     <LoadImage>Load watermark images from the file.</LoadImage>
@@ -2057,12 +2057,6 @@
     <TouchDescription>Optimized for used with touch</TouchDescription>
   </Interface>
   <MainMenu>
-    <menuHelpDocumentation>Documentation</menuHelpDocumentation>
-    <menuHelpVideos>Videos</menuHelpVideos>
-    <menuHelpSamples>Samples</menuHelpSamples>
-    <menuHelpForum>Forum</menuHelpForum>
-    <menuHelpDemos>Demos</menuHelpDemos>
-    <menuHelpTrainingCourses>Training Courses</menuHelpTrainingCourses>
     <menuCheckIssues>Check for Issues</menuCheckIssues>
     <menuContextClone>Clone...</menuContextClone>
     <menuContextDesign>Design...</menuContextDesign>
@@ -2140,10 +2134,16 @@
     <menuHelp>&amp;Help</menuHelp>
     <menuHelpAboutProgramm>&amp;About...</menuHelpAboutProgramm>
     <menuHelpContents>&amp;Contents</menuHelpContents>
+    <menuHelpDemos>Demos</menuHelpDemos>
+    <menuHelpDocumentation>Documentation</menuHelpDocumentation>
     <menuHelpFAQPage>FAQ Page</menuHelpFAQPage>
+    <menuHelpForum>Forum</menuHelpForum>
     <menuHelpHowToRegister>How to Register</menuHelpHowToRegister>
     <menuHelpProductHomePage>Product Home Page</menuHelpProductHomePage>
+    <menuHelpSamples>Samples</menuHelpSamples>
     <menuHelpSupport>&amp;Support</menuHelpSupport>
+    <menuHelpTrainingCourses>Training Courses</menuHelpTrainingCourses>
+    <menuHelpVideos>Videos</menuHelpVideos>
     <menuInsertColumnToLeft>Insert Column To Left</menuInsertColumnToLeft>
     <menuInsertColumnToRight>Insert Column To Right</menuInsertColumnToRight>
     <menuInsertRowAbove>Insert Row Above</menuInsertRowAbove>
@@ -2303,7 +2303,7 @@
     <OutOfRange>Out of range ("{0}")!</OutOfRange>
     <ParsingCommandException>An exception of processing the command in the specified xml: {0}</ParsingCommandException>
     <PleaseLogin>Please login using your Stimulsoft account credentials or register a new account before publishing report.</PleaseLogin>
-	<QuotaMaximumComputingCyclesCountExceeded>Maximum computing cycles count exceeded.</QuotaMaximumComputingCyclesCountExceeded>
+    <QuotaMaximumComputingCyclesCountExceeded>Maximum computing cycles count exceeded.</QuotaMaximumComputingCyclesCountExceeded>
     <QuotaMaximumDataRowsCountExceeded>Maximum data rows count in one data source exceeded.</QuotaMaximumDataRowsCountExceeded>
     <QuotaMaximumFileSizeExceeded>Maximum file size exceeded.</QuotaMaximumFileSizeExceeded>
     <QuotaMaximumItemsCountExceeded>Maximum items count exceeded.</QuotaMaximumItemsCountExceeded>
@@ -2342,6 +2342,7 @@
     <Download>Download</Download>
     <DownloadAll>Download All</DownloadAll>
     <DownloadAndInstall>Download and Install</DownloadAndInstall>
+    <DownloadDataAdapter>Download Data Adapter</DownloadDataAdapter>
     <Downloads>Downloads:</Downloads>
     <IAccept>I Accept</IAccept>
     <IDecline>I Decline</IDecline>
@@ -2354,7 +2355,6 @@
     <RetrievingInformation>Retrieving information...</RetrievingInformation>
     <Tags>Tags:</Tags>
     <Title>Data Adapter from NuGet</Title>
-    <DownloadDataAdapter>Download Data Adapter</DownloadDataAdapter>
     <ViewLicense>View License</ViewLicense>
   </NuGet>
   <Panels>
@@ -2801,12 +2801,12 @@
     <StiDateTimeTypeDate>Date</StiDateTimeTypeDate>
     <StiDateTimeTypeDateAndTime>Date and Time</StiDateTimeTypeDateAndTime>
     <StiDateTimeTypeTime>Time</StiDateTimeTypeTime>
+    <StiDesignerSpecificationAuto>Determine Automatically</StiDesignerSpecificationAuto>
+    <StiDesignerSpecificationBICreator>I'm BI Creator</StiDesignerSpecificationBICreator>
+    <StiDesignerSpecificationDeveloper>I'm Developer</StiDesignerSpecificationDeveloper>
     <StiDisplayNameTypeFull>Full</StiDisplayNameTypeFull>
     <StiDisplayNameTypeNone>None</StiDisplayNameTypeNone>
     <StiDisplayNameTypeShort>Short</StiDisplayNameTypeShort>
-    <StiDesignerSpecificationAuto>Determine Automatically</StiDesignerSpecificationAuto>
-    <StiDesignerSpecificationDeveloper>I'm Developer</StiDesignerSpecificationDeveloper>
-    <StiDesignerSpecificationBICreator>I'm BI Creator</StiDesignerSpecificationBICreator>
     <StiDockStyleBottom>Bottom</StiDockStyleBottom>
     <StiDockStyleFill>Fill</StiDockStyleFill>
     <StiDockStyleLeft>Left</StiDockStyleLeft>
@@ -2826,6 +2826,9 @@
     <StiEnumeratorTypeArabic>Arabic</StiEnumeratorTypeArabic>
     <StiEnumeratorTypeNone>None</StiEnumeratorTypeNone>
     <StiEnumeratorTypeRoman>Roman</StiEnumeratorTypeRoman>
+    <StiExtendedStyleBoolFalse>False</StiExtendedStyleBoolFalse>
+    <StiExtendedStyleBoolFromStyle>From Style</StiExtendedStyleBoolFromStyle>
+    <StiExtendedStyleBoolTrue>True</StiExtendedStyleBoolTrue>
     <StiFilterConditionBeginningWith>beginning with</StiFilterConditionBeginningWith>
     <StiFilterConditionBetween>between</StiFilterConditionBetween>
     <StiFilterConditionContaining>containing</StiFilterConditionContaining>
@@ -2859,6 +2862,16 @@
     <StiFilterItemValueOpen>Value Open</StiFilterItemValueOpen>
     <StiFilterModeAnd>And</StiFilterModeAnd>
     <StiFilterModeOr>Or</StiFilterModeOr>
+    <StiFontIconGroupAccessibilityIcons>Accessibility</StiFontIconGroupAccessibilityIcons>
+    <StiFontIconGroupBrandIcons>Brand</StiFontIconGroupBrandIcons>
+    <StiFontIconGroupDirectionalIcons>Directional</StiFontIconGroupDirectionalIcons>
+    <StiFontIconGroupGenderIcons>Gender</StiFontIconGroupGenderIcons>
+    <StiFontIconGroupMedicalIcons>Medical</StiFontIconGroupMedicalIcons>
+    <StiFontIconGroupPaymentIcons>Payment</StiFontIconGroupPaymentIcons>
+    <StiFontIconGroupSpinnerIcons>Spinner</StiFontIconGroupSpinnerIcons>
+    <StiFontIconGroupTransportationIcons>Transportation</StiFontIconGroupTransportationIcons>
+    <StiFontIconGroupVideoPlayerIcons>Video</StiFontIconGroupVideoPlayerIcons>
+    <StiFontIconGroupWebApplicationIcons>Application</StiFontIconGroupWebApplicationIcons>
     <StiFormStartModeOnEnd>On End</StiFormStartModeOnEnd>
     <StiFormStartModeOnPreview>On Preview</StiFormStartModeOnPreview>
     <StiFormStartModeOnStart>On Start</StiFormStartModeOnStart>
@@ -2877,6 +2890,11 @@
     <StiHorAlignmentCenter>Center</StiHorAlignmentCenter>
     <StiHorAlignmentLeft>Left</StiHorAlignmentLeft>
     <StiHorAlignmentRight>Right</StiHorAlignmentRight>
+    <StiIconAlignmentBottom>Bottom</StiIconAlignmentBottom>
+    <StiIconAlignmentLeft>Left</StiIconAlignmentLeft>
+    <StiIconAlignmentNone>None</StiIconAlignmentNone>
+    <StiIconAlignmentRight>Right</StiIconAlignmentRight>
+    <StiIconAlignmentTop>Top</StiIconAlignmentTop>
     <StiImageProcessingDuplicatesTypeGlobalHide>Global Hide</StiImageProcessingDuplicatesTypeGlobalHide>
     <StiImageProcessingDuplicatesTypeGlobalMerge>Global Merge</StiImageProcessingDuplicatesTypeGlobalMerge>
     <StiImageProcessingDuplicatesTypeGlobalRemoveImage>Global Remove Image</StiImageProcessingDuplicatesTypeGlobalRemoveImage>
@@ -2936,13 +2954,13 @@
     <StiMarkerAlignmentLeft>Left</StiMarkerAlignmentLeft>
     <StiMarkerAlignmentRight>Right</StiMarkerAlignmentRight>
     <StiMarkerTypeCircle>Circle</StiMarkerTypeCircle>
+    <StiMarkerTypeHalfCircle>Half Circle</StiMarkerTypeHalfCircle>
     <StiMarkerTypeHexagon>Hexagon</StiMarkerTypeHexagon>
     <StiMarkerTypeRectangle>Rectangle</StiMarkerTypeRectangle>
     <StiMarkerTypeStar5>Star 5</StiMarkerTypeStar5>
     <StiMarkerTypeStar6>Star 6</StiMarkerTypeStar6>
     <StiMarkerTypeStar7>Star 7</StiMarkerTypeStar7>
     <StiMarkerTypeStar8>Star 8</StiMarkerTypeStar8>
-    <StiMarkerTypeHalfCircle>Half Circle</StiMarkerTypeHalfCircle>
     <StiMarkerTypeTriangle>Triangle</StiMarkerTypeTriangle>
     <StiNestedFactorHigh>High</StiNestedFactorHigh>
     <StiNestedFactorLow>Low</StiNestedFactorLow>
@@ -3623,6 +3641,7 @@
     <Hyperlink>Hyperlink</Hyperlink>
     <HyperlinkDataColumn>Hyperlink Data Column</HyperlinkDataColumn>
     <Icon>Icon</Icon>
+    <IconAlignment>Icon Alignment</IconAlignment>
     <IconSet>Icon Set</IconSet>
     <IconSetCondition>Icon Set Condition</IconSetCondition>
     <Idents>Indents</Idents>
@@ -3698,6 +3717,7 @@
     <Length>Length</Length>
     <LengthUnderLabels>Length under Labels</LengthUnderLabels>
     <Lighting>Lighting</Lighting>
+    <LimitRows>Limit Rows</LimitRows>
     <Linear>Linear</Linear>
     <LinearBarBorderBrush>Linear Bar Border Brush</LinearBarBorderBrush>
     <LinearBarBrush>Linear Bar Brush</LinearBarBrush>
@@ -3740,12 +3760,12 @@
     <Margins>Margins</Margins>
     <Marker>Marker</Marker>
     <MarkerAlignment>Marker Alignment</MarkerAlignment>
+    <MarkerAngle>Marker Angle</MarkerAngle>
     <MarkerBorder>Marker Border</MarkerBorder>
     <MarkerBrush>Marker Brush</MarkerBrush>
     <MarkerColor>Marker Color</MarkerColor>
     <MarkerSize>Marker Size</MarkerSize>
     <MarkerType>Marker Type</MarkerType>
-    <MarkerAngle>Marker Angle</MarkerAngle>
     <MarkerVisible>Marker Visible</MarkerVisible>
     <MasterComponent>Master Component</MasterComponent>
     <MasterKeyDataColumn>Master Key Data Column</MasterKeyDataColumn>
@@ -3882,8 +3902,10 @@
     <Range>Range</Range>
     <RangeColorMode>Range Color Mode</RangeColorMode>
     <RangeFrom>From</RangeFrom>
+    <RangeMode>Range Mode</RangeMode>
     <RangeScrollEnabled>Range Scroll Enabled</RangeScrollEnabled>
     <RangeTo>To</RangeTo>
+    <RangeType>Range Type</RangeType>
     <Ratio>Ratio</Ratio>
     <RatioY>Ratio Y</RatioY>
     <ReadOnly>Read Only</ReadOnly>
@@ -3964,6 +3986,7 @@
     <SeriesLabelsColor>Series Labels Color</SeriesLabelsColor>
     <SeriesLabelsLineColor>Labels Line Color</SeriesLabelsLineColor>
     <SeriesLighting>Series Lighting</SeriesLighting>
+    <SeriesShowBorder>Series Show Border</SeriesShowBorder>
     <SeriesShowShadow>Series Show Shadow</SeriesShowShadow>
     <SeriesTitle>Series Title</SeriesTitle>
     <Shadow>Shadow</Shadow>
