--- a/localization/be.xml
+++ b/localization/be.xml
@@ -2889,7 +2889,7 @@
     <StiDesignerScaleModeAutomaticScaling>Аўтамаштаб</StiDesignerScaleModeAutomaticScaling>
     <StiDesignerScaleModeScaling100>100% маштаб</StiDesignerScaleModeScaling100>
     <StiDesignerSpecificationAuto>Вызначаць аўтаматычна</StiDesignerSpecificationAuto>
-    <StiDesignerSpecificationBICreator>Я рэдактар BI</StiDesignerSpecificationBICreator>
+    <StiDesignerSpecificationBICreator>Я рэдактар</StiDesignerSpecificationBICreator>
     <StiDesignerSpecificationDeveloper>Я распрацоўнік</StiDesignerSpecificationDeveloper>
     <StiDisplayNameTypeFull>Поўнае</StiDisplayNameTypeFull>
     <StiDisplayNameTypeNone>Не</StiDisplayNameTypeNone>
